identity: fix another principal leak

Spotted by valgrind.

https://bugzilla.gnome.org/show_bug.cgi?id=729865